--- a/elgarage/src/components/css/Navigation.css
+++ b/elgarage/src/components/css/Navigation.css
@@ -2,7 +2,8 @@
     font-weight: bold;
     font-size: 18px;
     color: white !important;
-    margin:5px;justify-content: center !important;
+    margin:2px 30px 2px 30px;
+    text-align: center !important;
 }
 .NavItem:hover{
     font-weight: bold;
@@ -15,9 +16,11 @@
 .fixed{
     position: fixed !important;
     width:100%;
-   top:0;
-   z-index: 20;
+    top:0;
+    z-index: 20;
+
 }
+
 .active{
     color: rgb(71, 179, 230) !important;
 }
