--- a/elgarage/frontend/src/Servicios.css
+++ b/elgarage/frontend/src/Servicios.css
@@ -1,6 +1,6 @@
 .bod{
-      background: -webkit-linear-gradient(to right, #faf285, #faf741);
-    background: linear-gradient(to right, #edf798, #f7dd4f);
+     /* background: -webkit-linear-gradient(to right, #faf285, #faf741);
+    background: linear-gradient(to right, #edf798, #f7dd4f);*/
  
 }
 .container {
