--- a/elgarage/frontend/src/Cotizacion.css
+++ b/elgarage/frontend/src/Cotizacion.css
@@ -9,6 +9,10 @@ justify-content:center;
     padding-bottom:20px;
     color:rgb(255, 208, 0);
 }
+.leftside{
+  background-color:#111 !important;
+}
+
 .form-inline {
     display: flex;
     flex-flow: row wrap;
