--- a/elgarage/frontend/src/App.css
+++ b/elgarage/frontend/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
 }
+footer{
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  
+ 
+  background-color: rgb(70, 69, 69);
+  text-align: center;
+}
+footer p{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+}
