Completing Services page

--- a/elgarage/frontend/src/Contacto.css
+++ b/elgarage/frontend/src/Contacto.css
@@ -24,3 +24,12 @@
     width:100%;
     position:absolute;
 }
+.contactoLabel{
+    color:black;
+}
+.btnContacto{
+    text-align: center;
+}
+.btnContacto>Button{
+    background-color:black;
+}
