--- a/elgarage/frontend/src/Nosotros.css
+++ b/elgarage/frontend/src/Nosotros.css
@@ -5,14 +5,29 @@
     
 }
 .jumbo-text{
-
+font-weight: bold;
     color:white;
 }
 .nosotros-text{
     text-align: justify;
     margin-top: 50px;
+    color:black;
 }
 .nosotros-img{
     position: relative;
-
+    
+}
+.logoNosotros{
+    margin-bottom:40px;
+}
+.listaNosotros{
+    list-style: none;
+}
+.valores{
+    font-weight: bold;
+    color:black;
+    text-align: center;
+}
+.listaNosotros > li>h4{
+    color:black;
 }
