Se arreglo el logo en vista mobil,asi como se agrego validacion de los campos cuando se crea una cita

--- a/elgarage/frontend/src/components/css/Navigation.css
+++ b/elgarage/frontend/src/components/css/Navigation.css
@@ -24,3 +24,12 @@
 .active{
     color: rgb(71, 179, 230) !important;
 }
+@media only screen and (max-width: 991px) {
+    .nav-mobil{
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+    
+}
+
