--- a/elgarage/frontend/src/css/Navigation.css
+++ b/elgarage/frontend/src/css/Navigation.css
@@ -1,27 +1,28 @@
-.NavItem{
+.NavItem {
     font-weight: bold;
-    font-size: 18px;
     color: white !important;
-    margin:2px 30px 2px 30px;
+    margin: 2px 10px;
     text-align: center !important;
 }
-.NavItem:hover{
-    font-weight: bold;
+
+.NavItem:hover {
     color: rgb(71, 179, 230) !important;
 }
-.navBar{
-    background-color:#111;
-    
+
+.navBar {
+    background-color: #111;
+
 }
-.fixed{
+
+.fixed {
     position: fixed !important;
-    width:100%;
-    top:0;
+    width: 100%;
+    top: 0;
     z-index: 20;
 
 }
 
-.active{
+.active {
     color: rgb(71, 179, 230) !important;
 }
 @media only screen and (max-width: 991px) {
@@ -30,6 +31,4 @@
         margin-right: auto;
         display: block;
     }
-    
 }
-
