--- a/elgarage/frontend/src/css/LoginAdmin.css
+++ b/elgarage/frontend/src/css/LoginAdmin.css
@@ -21,7 +21,7 @@
 }
 
 .login-page {
-    background-image: linear-gradient(#fff8, transparent), url("./assets/login-background.jpg");
+    background-image: linear-gradient(#fff8, transparent), url("../assets/login-background.jpg");
     height: 900px;
 }
 
